services/simple-service/routing/manifests/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-service
spec:
  hosts:
    - simple-service
  http:
  - route:
    - destination:
        host: simple-service
        subset: stable
      weight: 90
    - destination:
        host: simple-service
        subset: canary
      weight: 10
